ARROW-12226: [C++] Fix Address Sanitizer failures

Fix two failures seen locally in arrow-s3fs-test and arrow-io-memory-test.

Closes #9908 from pitrou/ARROW-12226-asan-fixes

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: David Li <li.davidm96@gmail.com>